--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h2 {
   align-items: flex-start;
   justify-content: center;
   text-align: center;
-  margin-left: 150px;
+  margin-left: 100px;
   margin-top: 200px;
   margin-bottom: 20px;
 }
@@ -115,6 +115,12 @@ p {
   img {
     height: 100px;
     width: 100px;
+    padding: 0;
+  }
+
+  .wrapped {
+    float: left;
+    padding: 0px 0px 0px 0px;
   }
 
   .container {
@@ -131,7 +137,9 @@ p {
     font-size: 10px;
     justify-content: center;
     align-items: center;
-    margin-top: 0px;
+    margin-left: 0;
+    margin-right: 0;
+    margin: 0;
   }
 
   .profile-container {
@@ -142,8 +150,8 @@ p {
     align-items: center;
     text-align: center;
     font-size: 10px;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 0;
+    margin-right: 0;
 
   }
 
